# just-how-many

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-20934cb619f1a2e199693f82db6d38c9b61e0f8e4de9c02f8884a38155bcf0a4.json  query-3f6083651d54536b3ff17e50228e81ae0b7f8776cd1cdf6c9c790974fd06e2ba.json  query-9532a8398b6f22bc3ded4cd27494837fbb012de087f42173c5195a5a432d2087.json  query-bc0db43c191c5df2d0b6bb9d8418381102086797d90b8be29de2a193817a2211.json  query-d884475f9eabdabb15ab4a120934082806405371be0b8b012e70097197154e72.json
configuration/: base.yaml  local.yaml  production.yaml
examples/: index.html
migrations/: 20231203081918_create_pages_table.sql  20231203193551_add_timestamps_column.sql
scripts/: init_postgres.sh  init_redis.sh
src/: configuration.rs  routes.rs  startup.rs  utils.rs
src/routes/: hit.rs  hits.rs  register.rs
tests/api/: helper.rs  hit.rs  hits.rs  main.rs  register.rs
