[package]
name = "jhm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/jhm.rs"
name = "jhm"

[[bin]]
path = "src/bin/jhm_server.rs"
name = "jhm-server"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features =  ["derive"] }
serde-aux = "3"
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
r2d2 = "0.8"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
clap = { version = "4.4.10", features = ["derive", "env"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
]

[dependencies.redis]
version = "0.23"
features = [
"r2d2",
"connection-manager",
"tokio-rustls-comp",
"tokio-native-tls-comp"
]

# Could reqwest be moved to dev dependencies?
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies", "serde_json", "blocking"]

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
rand = "0.8.5"
